# Marker-Detection-General

./: README.md
apriltag/: CMakeLists.txt  config.yaml
apriltag/example/: opencv_demo.cc
apriltag/point_pub/: pcl_pub.cpp
apriltag/yorktaglidar/: config.yaml  main.cpp  merge.cpp
aruco_detection/: CMakeLists.txt  config.yaml  config_apriltag.yaml
aruco_detection/src/: main.cpp  main_apriltag.cpp
